--- a/html_file.html
+++ b/html_file.html
@@ -77,14 +77,14 @@ address,caption,cite,code,dfn,em,var{font-style:normal;font-weight:normal}
 
 <div class="cmtext_ad rendered viewable" id="ad-0">
     <strong class="screen_out">광고 링크</strong>
-    <a adfit-landing-url="" href="https://ka.ad.daum.net/click/http%3A%2F%2Fwww.jneng.co.kr%2Foverhead_door%2Fseries-400.php%3Futm_source%3Dkakao%26utm_medium%3Dkeyword%26utm_campaign%3DPREMIUM_LINK%26k_campaign%3D255703274830626816%26k_adgroup%3D255738548426760193%26k_media%3DPREMIUM_LINK_CONTENT%26k_creative%3D255750025048162305%26k_creativelink%3D255750044783337472%26k_rank%3D1/Tpn9jrMaHHPsWmxn2b6D508fjktoDKe4kiusXoGXMwwwjt0re1gx6grjV45bRbfR0oXH0STVdeKf2dZdOgs3Prt4wTzs_OQEpUC8vKLdnEaubZDnsclKKwE32LFKBm20m45nWT-HQcnlwJefZTMBnN7WUDzP7_a8P9o4bX3AfTZD38q3TeMZlPtrGx6GclpHEKH563A1vlpfA0LZJl1Ocr9_IBgRz8AdPChatr-By2xakfSHMVW_yGSfBUF9pgiLEywtc1piMBoA5p48OXjIoA_xKQrOooNl434PaliNbZeXHSJ2j6mHw6ASV_1SFdkZgcqlRskw9nKG-edH6HPdy92tgY-Esc5AoMwLx7Zm1wtIXNRtmoKW0YNxbuI1dg==?p=c0yCBv5UPZFfiBeRXHL0jw" rel="noopener" target="_blank" class="link_ad">
+    <a adfit-landing-url="" href="https://ka.ad.daum.net/click/https%3A%2F%2Fwww.ybmecc.com%2F%3Futm_source%3Dkakao%26utm_medium%3Dkeyword%26utm_campaign%3DPREMIUM_LINK%26k_campaign%3D195478966000189440%26k_adgroup%3D195483911477465088%26k_media%3DPREMIUM_LINK_CONTENT%26k_creative%3D198828344218927104%26k_creativelink%3D200192385899503616%26k_rank%3D1/Tpn9jrMaHHPsWmxn2b6D508WhkNuX_K5myujXYTCMwxijtUre1FjvQrnDYILQ-zThdPG1XXVdeKf2dZdOgs3Prt4wTzs_OQEpUC8vKLdwkT6PsqzsJ5KK1cz2rFKDji4m9cwCD6HRpjhx8LLPj1UnonRUDzP7_a8P9o4bX3AfTZD38q3TeMZlPtrGx6GclpHEKH563A1vlpfA0LZJl1Oe79iPRsYzcMQIzIY4ejanTor1LKkJl-zwyLnVBYD5FHaQTwmbkkje05Ht85MbWjC9ValaV-HooN34mxfM2u3K8fMFSg4xv3WzfEQXPwVDbhSjYj0GZYh-Hee46EIpWPRjabwwMra9NhLrsgf1fI6kAdFa-BwhZuBh5t8b6pYJyKCZeEkKxPhh_v0byNTXODjKWde?p=U5NMaREew-KcUJuAKd8g_tBLffgYry4otA9ZjlPH1gI" rel="noopener" target="_blank" class="link_ad">
       <span class="area_ad">
         <strong class="tit_ad">
-          <span adfit-title="">국산 차고자동문 진남ENG</span>
+          <span adfit-title="">YBM Ivy Kids</span>
           <span adfit-body-ext="" class="ad_info"></span>
         </strong>
-        <span adfit-desc="" class="desc_ad">차고자동문,단열셔터&amp;롤업도어, 오버헤드도어 생산, 방음/방염셔터</span>
-        <span adfit-display-url="" class="url_ad">http://www.jneng.co.kr</span>
+        <span adfit-desc="" class="desc_ad">재미있게 배우는 우리아이 첫 영어! 창의력 향상, 기초튼튼 즐거운 어린이영어.</span>
+        <span adfit-display-url="" class="url_ad">https://www.ybmecc.com</span>
       </span>
       <span class="btn_ad">
         <span class="ico_ad">자세히 보기</span>
